feat: Add links

--- a/front/src/static/css/main.sass
+++ b/front/src/static/css/main.sass
@@ -106,10 +106,13 @@ p
         border-bottom: 1px solid #FF6955
         margin: 1em 0
 
-.telegram-link
+.telegram-link, .github-link
     margin-top: 3em
     a
         font-size: 2em
+
+.github-link
+    margin-top: 1em
 
 
 .center
