--- a/front/src/static/css/main.sass
+++ b/front/src/static/css/main.sass
@@ -20,7 +20,7 @@ body
     height: 100%
 
 h1
-    margin-top: 12% !important
+    margin-top: 6% !important
     font-size: 6em
     color: $panel-color
 
@@ -40,6 +40,11 @@ p
     display: flex !important
     justify-content: space-between
     font-weight: 100 !important
+    font-size: .9em !important
+
+    b
+        font-size: 1.5em !important
+        font-weight: 900
 
 .navigation
     a
@@ -107,9 +112,8 @@ p
         margin: 1em 0
 
 .telegram-link, .github-link
-    margin-top: 3em
-    a
-        font-size: 2em
+    margin-top: 15em
+    font-size: 1em
 
 .github-link
     margin-top: 1em
@@ -121,6 +125,9 @@ p
 .customer
     font-size: .8em
     color: #1111b5
+
+    a
+        text-decoration: underline
 
 .frame
     width: 100%
