--- a/front/src/static/css/main.sass
+++ b/front/src/static/css/main.sass
@@ -37,6 +37,15 @@ h1
     font-family: DelaGothicOne !important
     font-weight: 100 !important
 
+h2
+    color: $second-color
+    font-size: 3em
+    font-weight: 900
+    margin-bottom: 1em
+    margin-top: 1em !important
+
+.big
+    font-size: 2em
 p
     white-space: pre-line
 
@@ -105,6 +114,9 @@ p
     padding: 32px
     color: $panel-color
 
+    a
+        text-decoration: underline
+
     h3
         color: $panel-color
 
@@ -149,8 +161,7 @@ p
     font-size: .8em
     color: #1111b5
 
-    a
-        text-decoration: underline
+
 
 .frame
     width: 100%
@@ -177,3 +188,6 @@ p
 
 .carousel-next
     right: 10px !important
+
+.ui.dimmer
+    border-radius: 4px !important
